Fix behavior